fix minor typos

--- a/notebooks/solutions/html/1-1_exercise_slvd.html
+++ b/notebooks/solutions/html/1-1_exercise_slvd.html
@@ -13106,13 +13106,33 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[48]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="nf">source</span><span class="p">(</span><span class="s">&quot;run_me_first.R&quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+
+    <div class="prompt"></div>
+
+
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>Loading required package: Matrix
+Loading &#39;metafor&#39; package (version 2.1-0). For an overview 
+and introduction to the package please type: help(metafor).
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -13134,7 +13154,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Create a new R "Code" and then a new "Markdown" cell under this (Markdown) cell. In the code cell, execute the expression <code>13*17*19</code>.</p>
+<p>Create new R "Code" and then a new "Markdown" cell under this (Markdown) cell. In the code cell, execute the expression <code>13*17*19</code>.</p>
 
 </div>
 </div>
@@ -13321,7 +13341,7 @@ alloc	character	method of treatment allocation (random, alternate, or systematic
 </tr>
 </tbody>
 </table>
-<p>Actually, we like this version of the table better (it also corresponds with our slides on RRs):</p>
+<p>Actually, we like this version of the table better (it also corresponds to our slides on RRs):</p>
 <table>
 <thead><tr>
 <th>.</th>
@@ -13984,7 +14004,7 @@ AQAEIewAAIIQdgAAQQg7AIAghB0AQBDCDgAgCGEHABCEsAMACELYAQAEIewAAIL4X0RNCZT1
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Tip: Compared to other statistical packages, the output of a lm() call looks rather minimal; no significance stars, no R 2 statistic, etc. The <code>summary()</code> function provides much more information about the model fit and the regression coefficients. So, your final R call might look like this: <code>summary(lm(y ~ x, data = ...))</code>.</p>
+<p>Tip: Compared to other statistical packages, the output of a lm() call looks rather minimal; no significance stars, no $R^2$ statistic, etc. The <code>summary()</code> function provides much more information about the model fit and the regression coefficients. So, your final R call might look like this: <code>summary(lm(y ~ x, data = ...))</code>.</p>
 
 </div>
 </div>
