--- a/notebooks/solutions/html/4-1_exercise_slvd.html
+++ b/notebooks/solutions/html/4-1_exercise_slvd.html
@@ -14448,7 +14448,7 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 
 <span class="c1">## - a negative value means that the vaccine indeed works.</span>
 <span class="c1">## - 0 means there is no effect at all, yi &gt; 0 means the vaccine is harmful.</span>
-<span class="c1">###  - vaccine works better in cntries for lattitudes bw. 34 and 90</span>
+<span class="c1">##  - vaccine works better in cntries for lattitudes bw. 34 and 90</span>
 </pre></div>
 
     </div>
