add explanation about 2x2 tables in escalc(), 1_1

--- a/notebooks/solutions/html/1-1_exercise_slvd.html
+++ b/notebooks/solutions/html/1-1_exercise_slvd.html
@@ -13370,7 +13370,7 @@ alloc	character	method of treatment allocation (random, alternate, or systematic
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The following function <code>escalc</code> will be introduced in more detail later. For now, you just need to know that it is used to calculate the effect size (relative risk/risk ratio) and corresponding variance (the log relative risk).</p>
+<p>The following function <code>escalc</code> will be introduced in more detail later. For now, you just need to know that it is used to calculate the effect size (relative risk/risk ratio) and corresponding variance (actually, it calculates the log relative risk). For correctly assigning the four table cells to the function arguments <code>ai</code>, <code>bi</code>, <code>ci</code>, <code>di</code> see <a href="https://cran.r-project.org/web/packages/metafor/metafor.pdf">https://cran.r-project.org/web/packages/metafor/metafor.pdf</a> (e.g., "ai vector to specify the 2×2 table frequencies (upper left cell).", p. 94).</p>
 
 </div>
 </div>
